--- a/css/main.css
+++ b/css/main.css
@@ -326,3 +326,43 @@ li {
   list-style: inside url("../media/svg/circle.svg");
 }
 
+.message-box {
+  padding: 6.3%;
+  /* border: red solid; */
+}
+
+.message {
+  font-family: "Inter", sans-serif;
+  font-size: 32px;
+  font-weight: 700;
+  text-align: center;
+  margin-top: 30%;
+}
+
+.form {
+  padding: 0% 6%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form > * {
+  padding: 4%;
+  width: 95%;
+  border: unset;
+  border-bottom: rgb(156, 156, 156) 1px solid;
+}
+
+.submit-btn {
+  padding: 5%;
+  margin-top: 20%;
+  width: 40%;
+  background-color: #ff6b00;
+  color: #f4f5f7;
+}
+
+.social {
+  display: flex;
+  justify-content: center;
+  margin-top: 10%;
+}
