--- a/css/main.css
+++ b/css/main.css
@@ -328,6 +328,7 @@ li {
 
 .message-box {
   padding: 6.3%;
+
   /* border: red solid; */
 }
 
@@ -362,7 +363,7 @@ li {
   color: #f4f5f7;
 }
 
-.social {
+.social-down {
   display: flex;
   justify-content: center;
   margin-top: 40%;
